style: Refactored to comply with style guides.